--- a/stack.yaml
+++ b/stack.yaml
@@ -94,65 +94,8 @@ resources:
                 write_files:
                     - path: /root/calico.yaml
                       content: { get_file: calico.yaml }
-#                    - path: /root/tiller.yaml
-#                      content: { get_file: tiller.yaml }
-#                    - path: /root/spinnaker.yaml
-#                      content:
-#                          str_replace:
-#                              template:
-#                                  if:
-#                                      - empty_proxy
-#                                      - |
-#                                        providers:
-#                                          docker:
-#                                            # Configure your Docker registries here
-#                                            accounts:
-#                                            - name: dockerhub
-#                                              address: https://index.docker.io
-#                                              repositories:
-#                                                - library/alpine
-#                                                - library/ubuntu
-#                                                - library/centos
-#                                                - library/nginx
-#                                        jenkins:
-#                                          Master:
-#                                            NeverDownloadPlugins: true
-#                                            rbac:
-#                                              enabled: true
-#                                        rbac:
-#                                          enabled: true
-#                                      - |
-#                                        providers:
-#                                          docker:
-#                                            # Configure your Docker registries here
-#                                            accounts:
-#                                            - name: dockerhub
-#                                              address: https://index.docker.io
-#                                              repositories:
-#                                                - library/alpine
-#                                                - library/ubuntu
-#                                                - library/centos
-#                                                - library/nginx
-#                                        jenkins:
-#                                          Master:
-#                                            NeverDownloadPlugins: true
-#                                            rbac:
-#                                              enabled: true
-#                                        rbac:
-#                                          enabled: true
-#                                        clouddriver:
-#                                          proxy:
-#                                            http:
-#                                              enabled: true
-#                                              host: "$proxy_host"
-#                                              port: $proxy_port
-#                                            https:
-#                                              enabled: true
-#                                              host: "$proxy_host"
-#                                              port: $proxy_port
-#                              params:
-#                                $proxy_host: { get_param: proxy_host }
-#                                $proxy_port: { get_param: proxy_port }
+                    - path: /root/webserver.py
+                      content: { get_file: webserver.py }
     master:
         type: node.yaml
         properties:
@@ -177,7 +120,7 @@ resources:
                 str_replace:
                     params:
                         $floatingip: { get_attr: [master_floatingip, floating_ip_address] }
-                        $token: { get_attr: [token, value] }
+#                        $token: { get_attr: [token, value] }
                         $proxy_host: { get_param: proxy_host }
                         $proxy_port: { get_param: proxy_port }
                     template: { get_file: master.sh }
@@ -208,32 +151,7 @@ resources:
                     install_script:
                         str_replace:
                             params:
-                                $token: { get_attr: [token, value] }
                                 $master_ip: { get_attr: [ master, ip_address ] }
                                 $proxy_host: { get_param: proxy_host }
                                 $proxy_port: { get_param: proxy_port }
                             template: { get_file: slave.sh }
-    ##### Token for kubeadm ####
-    token_part_1:
-        type: OS::Heat::RandomString
-        properties:
-            length: 6
-            character_classes: []
-            character_sequences:
-                - {min: 6, sequence: "0123456789abcdef"}
-    token_part_2:
-        type: OS::Heat::RandomString
-        properties:
-            length: 16
-            character_classes: []
-            character_sequences:
-                - {min: 16, sequence: "0123456789abcdef"}
-    token:
-        type: OS::Heat::Value
-        properties:
-            value:
-                str_replace:
-                    template: $part1.$part2
-                    params:
-                        $part1: { get_resource: token_part_1 }
-                        $part2: { get_resource: token_part_2 }
