--- a/stack.yaml
+++ b/stack.yaml
@@ -69,6 +69,9 @@ parameters:
         label: Proxy Port
         description: Proxy port to use
         default: 0
+    volume_size:
+        type: number
+        default: 50
 conditions:
     empty_proxy:
         equals:
@@ -103,9 +106,11 @@ resources:
             key_name: { get_param: key_name }
             image: { get_param: image }
             flavor: { get_param: master_flavor }
+            public_network_id: { get_param: public_network_id }
             floating_ips: [{ get_param: master_floating_ip }]
             additional_config: { get_resource: master_config }
             availability_zone: { get_param: availability_zone }
+            volume_size: { get_param: volume_size }
             name:
                 str_replace:
                     template: $prefix$random-master
@@ -120,7 +125,6 @@ resources:
                 str_replace:
                     params:
                         $floatingip: { get_attr: [master_floatingip, floating_ip_address] }
-#                        $token: { get_attr: [token, value] }
                         $proxy_host: { get_param: proxy_host }
                         $proxy_port: { get_param: proxy_port }
                     template: { get_file: master.sh }
@@ -136,8 +140,10 @@ resources:
                     key_name: { get_param: key_name }
                     image: { get_param: image }
                     flavor: { get_param: slave_flavor }
+                    public_network_id: { get_param: public_network_id }
                     floating_ips: { get_param: slave_floating_ips }
                     availability_zone: { get_param: availability_zone }
+                    volume_size: { get_param: volume_size}
                     name:
                         str_replace:
                             template: $prefix$random-slave-%index%
