--- a/stack_full.yaml
+++ b/stack_full.yaml
@@ -61,12 +61,15 @@ parameters:
         label: Proxy Port
         description: Proxy port to use
         default: 0
+    volume_size:
+        type: number
+        default: 50
+
 conditions:
     deploy_proxy:
         equals:
             - { get_param: proxy_host }
             - "deploy"
-
 resources:
     random_string:
         type: OS::Heat::RandomString
@@ -145,6 +148,7 @@ resources:
                 - port_range_min: 30000
                   port_range_max: 32767
                   protocol: tcp
+
     ##### Stack #####
     stack:
         type: stack.yaml
@@ -163,6 +167,7 @@ resources:
             dns_nameservers: { get_param: dns_nameservers }
             availability_zone: { get_param: availability_zone }
             security_group: { get_resource: security_group }
+            volume_size: { get_param: volume_size }
             proxy_host:
                 if:
                     - deploy_proxy
