--- a/node.yaml
+++ b/node.yaml
@@ -56,10 +56,11 @@ parameters:
         label: Proxy Port
         description: Proxy port to use
         default: 0
-    volume_size:
+    master_volume_size:
         type: number
         default: 50
-   
+    volume_size:
+        type: number
 conditions:
     empty_additional_config:
         equals:
