--- a/none.yaml
+++ b/none.yaml
@@ -67,7 +67,10 @@ parameters:
   commandLog:
     type: boolean
     default: false
-
+    
+  environment:
+    type: string
+    default: development  
 
 resources:
   security_group:
@@ -119,6 +122,8 @@ resources:
         - device_name: vda
           volume_id: { get_resource: bootable_volume }
           delete_on_termination: True
+    metadata:
+      env: { get_param: environment }
 
 
 
