--- a/none.yaml
+++ b/none.yaml
@@ -123,7 +123,7 @@ resources:
           volume_id: { get_resource: bootable_volume }
           delete_on_termination: True
     metadata:
-      local
+      env: local
 
 
       user_data:
