--- a/DBaaS_MongoDB_mongodb.yaml
+++ b/DBaaS_MongoDB_mongodb.yaml
@@ -555,11 +555,11 @@ outputs:
     description: MongoDB cluster connection url
     value:
       str_replace:
-        template: mongodb://root:pass@host1:27017,host2:27017,host3:27017/?replicaSet=rs0
+        template: mongodb://root:$pass@$host1:27017,$host2:27017,$host3:27017/?replicaSet=rs0
         params:
-          pass: { get_param: db_pass }
-          host1: { get_attr: [mongo1_floatingip, floating_ip_address] }
-          host2: { get_attr: [mongo2_floatingip, floating_ip_address] }
-          host3: { get_attr: [mongo3_floatingip, floating_ip_address] }
+          $pass: { get_param: db_pass }
+          $host1: { get_attr: [mongo1_floatingip, floating_ip_address] }
+          $host2: { get_attr: [mongo2_floatingip, floating_ip_address] }
+          $host3: { get_attr: [mongo3_floatingip, floating_ip_address] }
 
     
