--- a/DBaaS_MongoDB_mongodb.yaml
+++ b/DBaaS_MongoDB_mongodb.yaml
@@ -229,6 +229,8 @@ resources:
             $proxy_host: { get_param: proxy_host }
             $proxy_port: { get_param: proxy_port }
             $db_pass: { get_param: db_pass }
+            $commandLog: { get_param: commandLog }
+            $isprodvm: { get_param: isprodvm}
             $db: { get_param: custom_db }
             $ip1: { get_attr: [mongo1_floatingip, floating_ip_address] }
             $ip2: { get_attr: [mongo2_floatingip, floating_ip_address] }
@@ -556,7 +558,7 @@ outputs:
     value: MongoDB
   keypair: 
     description: Keypair to connect to Database instances
-    value: { get_param: db_pass }
+    value: { get_param: key }
   flavor: 
     description: Database instance flavor
     value: { get_param: flavor }
@@ -584,7 +586,7 @@ outputs:
           $host1: { get_attr: [port1, fixed_ips] }
           $host2: { get_attr: [port2, fixed_ips] }
           $host3: { get_attr: [port3, fixed_ips] }
-  mongodb_connection_url:
+  connection_url:
     description: MongoDB cluster connection url
     value:
       str_replace:
