--- a/DBaaS_MongoDB_mongodb.yaml
+++ b/DBaaS_MongoDB_mongodb.yaml
@@ -583,9 +583,9 @@ outputs:
       str_replace:
         template: $host1,$host2,$host3
         params:
-          $host1: { get_attr: [port1, fixed_ips] }
-          $host2: { get_attr: [port2, fixed_ips] }
-          $host3: { get_attr: [port3, fixed_ips] }
+          $host1: { get_attr: [mongo1, networks, private, 0] }
+          $host2: { get_attr: [mongo2, networks, private, 0] }
+          $host3: { get_attr: [mongo3, networks, private, 0] }
   connection_url:
     description: MongoDB cluster connection url
     value:
