--- a/DBaaS_CassandraDB_cassandradb.yaml
+++ b/DBaaS_CassandraDB_cassandradb.yaml
@@ -17,7 +17,7 @@ parameters:
   public_network_id:
     type: string
     default: non-prod2
-  resource_prefix:
+  stack_name:
     type: string
     description: Prefix to add to all resources
     default: cockroach
@@ -70,32 +70,72 @@ parameters:
     default: JMNG-PE3-PROD3
 
 resources:
-  random_string:
+  random_string1:
       type: OS::Heat::RandomString
       properties:
           length: 4
           sequence: lowercase
-  prefix_random:
+  random_string2:
+      type: OS::Heat::RandomString
+      properties:
+          length: 4
+          sequence: lowercase
+  random_string3:
+      type: OS::Heat::RandomString
+      properties:
+          length: 4
+          sequence: lowercase
+
+  cassandra1_name:
       type: OS::Heat::Value
-      depends_on: random_string
+      depends_on: random_string1
       properties:
           value:
               str_replace:
-                  template: $prefix-$random
+                  template: dbaas-$prefix-$random
                   params:
-                      $prefix: { get_param: resource_prefix }
-                      $random: { get_resource: random_string }
+                      $prefix: { get_param: stack_name }
+                      $random: { get_resource: random_string1 }
 
+  cassandra2_name:
+      type: OS::Heat::Value
+      depends_on: random_string2
+      properties:
+          value:
+              str_replace:
+                  template: dbaas-$prefix-$random
+                  params:
+                      $prefix: { get_param: stack_name }
+                      $random: { get_resource: random_string2 }
+  cassandra3_name:
+      type: OS::Heat::Value
+      depends_on: random_string3
+      properties:
+          value:
+              str_replace:
+                  template: dbaas-$prefix-$random
+                  params:
+                      $prefix: { get_param: stack_name }
+                      $random: { get_resource: random_string3 }
+
+
+
+  random_string_sg:
+      type: OS::Heat::RandomString
+      properties:
+          length: 4
+          sequence: lowercase
 
   security_group:
       type: OS::Neutron::SecurityGroup
-      depends_on: random_string
+      depends_on: random_string1
       properties:
           name:
               str_replace:
-                  template: $prefix-security-group
+                  template: $prefix-$random
                   params:
-                      $prefix: { get_attr: [prefix_random, value] }
+                      $prefix: { get_param: stack_name }
+                      $random: { get_resource: random_string_sg }
           rules:
               - remote_mode: remote_group_id
                 direction: ingress
@@ -109,6 +149,7 @@ resources:
               - port_range_min: 7000
                 port_range_max: 7000
                 protocol: tcp
+
   port1:
       type: OS::Neutron::Port
       depends_on: security_group
@@ -119,7 +160,6 @@ resources:
             - subnet_id: { get_param: subnet_name }
           security_groups:
             - { get_resource: security_group }
-
   port2:
       type: OS::Neutron::Port
       depends_on: security_group
@@ -141,32 +181,22 @@ resources:
           security_groups:
             - { get_resource: security_group }
 
-  port4:
-      type: OS::Neutron::Port
-      depends_on: security_group
-      properties:
-          admin_state_up: true
-          network: { get_param: network_name }
-          fixed_ips:
-            - subnet_id: { get_param: subnet_name }
-          security_groups:
-            - { get_resource: security_group }
 
-  instance1_floatingip:
+  cassandra1_floatingip:
       type: OS::Neutron::FloatingIP
       depends_on: port1
       properties:
           floating_network_id: { get_param: public_network_id }
           port_id: { get_resource: port1 }
 
-  instance2_floatingip:
+  cassandra2_floatingip:
       type: OS::Neutron::FloatingIP
       depends_on: port2
       properties:
           floating_network_id: { get_param: public_network_id }
           port_id: { get_resource: port2 }
 
-  instance3_floatingip:
+  cassandra3_floatingip:
       type: OS::Neutron::FloatingIP
       depends_on: port3
       properties:
@@ -174,10 +204,11 @@ resources:
           port_id: { get_resource: port3 }
 
 
-  cassandra_instance1:
+  cassandra1:
     type: OS::Nova::Server
     depends_on: port1
     properties:
+      name: { get_attr: [cassandra1_name, value] }
       flavor: { get_param: flavor }
       key_name: { get_param: key }
       availability_zone: { get_param: az1 }
@@ -195,10 +226,12 @@ resources:
             $proxy_host: { get_param: proxy_host }
             $proxy_port: { get_param: proxy_port }
             $db_pass: { get_param: db_pass }
+            $commandLog: { get_param: commandLog }
+            $isprodvm: { get_param: isprodvm}
             $db: { get_param: custom_db }
-            $ip1: { get_attr: [ port1, fixed_ips, 0, ip_address ]}
-            $ip2: { get_attr: [ port2, fixed_ips, 0, ip_address ]}
-            $ip3: { get_attr: [ port3, fixed_ips, 0, ip_address ]}
+            $ip1: { get_attr: [cassandra1_floatingip, floating_ip_address] }
+            $ip2: { get_attr: [cassandra2_floatingip, floating_ip_address] }
+            $ip3: { get_attr: [cassandra3_floatingip, floating_ip_address] }
           template: |
             #!/bin/bash
             echo "$ip1  cassandra1" >> /etc/hosts
@@ -274,10 +307,11 @@ resources:
             systemctl enable telegraf
             systemctl restart telegraf
 
-  cassandra_instance2:
+  cassandra2:
     type: OS::Nova::Server
     depends_on: [ port2, cassandra_instance1 ]
     properties:
+      name: { get_attr: [cassandra2_name, value] }
       flavor: { get_param: flavor }
       key_name: { get_param: key }
       availability_zone: { get_param: az2 }
@@ -295,10 +329,12 @@ resources:
             $proxy_host: { get_param: proxy_host }
             $proxy_port: { get_param: proxy_port }
             $db_pass: { get_param: db_pass }
+            $commandLog: { get_param: commandLog }
+            $isprodvm: { get_param: isprodvm}
             $db: { get_param: custom_db }
-            $ip1: { get_attr: [ port1, fixed_ips, 0, ip_address ]}
-            $ip2: { get_attr: [ port2, fixed_ips, 0, ip_address ]}
-            $ip3: { get_attr: [ port3, fixed_ips, 0, ip_address ]}
+            $ip1: { get_attr: [cassandra1_floatingip, floating_ip_address] }
+            $ip2: { get_attr: [cassandra2_floatingip, floating_ip_address] }
+            $ip3: { get_attr: [cassandra3_floatingip, floating_ip_address] }
           template: |
             #!/bin/bash
             echo "$ip1  cassandra1" >> /etc/hosts
@@ -374,10 +410,11 @@ resources:
             systemctl enable telegraf
             systemctl restart telegraf
 
-  cassandra_instance3:
+  cassandra3:
     type: OS::Nova::Server
     depends_on: [ port3, cassandra_instance1 ]
     properties:
+      name: { get_attr: [cassandra1_name, value] }
       flavor: { get_param: flavor }
       key_name: { get_param: key }
       availability_zone: { get_param: az3 }
@@ -395,10 +432,12 @@ resources:
             $proxy_host: { get_param: proxy_host }
             $proxy_port: { get_param: proxy_port }
             $db_pass: { get_param: db_pass }
+            $commandLog: { get_param: commandLog }
+            $isprodvm: { get_param: isprodvm}
             $db: { get_param: custom_db }
-            $ip1: { get_attr: [ port1, fixed_ips, 0, ip_address ]}
-            $ip2: { get_attr: [ port2, fixed_ips, 0, ip_address ]}
-            $ip3: { get_attr: [ port3, fixed_ips, 0, ip_address ]}
+            $ip1: { get_attr: [cassandra1_floatingip, floating_ip_address] }
+            $ip2: { get_attr: [cassandra2_floatingip, floating_ip_address] }
+            $ip3: { get_attr: [cassandra3_floatingip, floating_ip_address] }
           template: |
             #!/bin/bash
             echo "$ip1  cassandra1" >> /etc/hosts
@@ -472,12 +511,46 @@ resources:
             systemctl restart telegraf
 
 outputs:
-  cassandra_connection_url:
-    description: Cassandra cluster connection url
+  db_engine: 
+    description: Database engine name
+    value: Cassandra
+  keypair: 
+    description: Keypair to connect to Database instances
+    value: { get_param: key }
+  flavor: 
+    description: Database instance flavor
+    value: { get_param: flavor }
+  network_name: 
+    description: Database network 
+    value: { get_param: network_name }
+  subnet_name: 
+    description: Database subnet
+    value: { get_param: subnet_name }
+  nodes_pubip: 
+    description: Database instance public ip
     value:
       str_replace:
-        template: cassandra://host1,host2,host3
+        template: $host1,$host2,$host3
         params:
-          host1: { get_attr: [instance1_floatingip, floating_ip_address] }
-          host2: { get_attr: [instance2_floatingip, floating_ip_address] }
-          host3: { get_attr: [instance3_floatingip, floating_ip_address] }
+          $host1: { get_attr: [cassandra1_floatingip, floating_ip_address] }
+          $host2: { get_attr: [cassandra2_floatingip, floating_ip_address] }
+          $host3: { get_attr: [cassandra3_floatingip, floating_ip_address] }
+  nodes_pvtip: 
+    description: Database instance private ip
+    value:
+      str_replace:
+        template: $pvtip1,$pvtip2,$pvtip3
+        params:
+          $pvtip1: { get_attr: [port1, fixed_ips, 0, ip_address] }
+          $pvtip2: { get_attr: [port2, fixed_ips, 0, ip_address] }
+          $pvtip3: { get_attr: [port3, fixed_ips, 0, ip_address] }
+  connection_url:
+    description: MongoDB cluster connection url
+    value:
+      str_replace:
+        template: cassandra://root:$pass@$host1:7000,$host2:7000,$host3:7000
+        params:
+          $pass: { get_param: db_pass }
+          $host1: { get_attr: [mongo1_floatingip, floating_ip_address] }
+          $host2: { get_attr: [mongo2_floatingip, floating_ip_address] }
+          $host3: { get_attr: [mongo3_floatingip, floating_ip_address] }
